Added language support for English, Turkish, German, and French; dropdown menu is now operational.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -23,6 +23,10 @@
  "Download Data" :"Download Data",
  "View": "View",
  "Edit": "Edit",
- "Delete": "Delete"
+ "Delete": "Delete",
+ "Back to Home": "Back to Home",
+ "Update Product": "Update Product"
+
+
 
 }
